# drone-simulations

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  conanfile.txt
data/: seeds.csv
src/: main.cpp
src/lib/: Atmosphere.hpp  Finance.hpp  Hydrogen.hpp  IntermodalContainer.hpp  Light.hpp  Microgreens.cpp  Microgreens.hpp  QuadCopter.cpp  QuadCopter.hpp  SolarPanel.cpp  SolarPanel.hpp
